--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pageflip": "^2.0.3",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
-    "swiper": "^9.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
